# libnp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  np_linux.c  np_stub.c  np_util.c  np_util.h  np_windows.c  np_windows.def
include/: np.h
np/: main.c
